--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "prueba de conceptos view-presenter",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha:babel",
     "trasnpiler": "babel dist/bundle.js —out-file dist/bundle.js",
-    "build": " webpack"
+    "build": " webpack",
+    "mocha:babel": "mocha \"./{,!(node_modules)/**/}*.spec.js\" --recursive --compilers js:babel-core/register"
   },
   "keywords": [
     "React",
