--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "babel-cli": "^6.26.0",
     "jquery": "^3.2.1",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "vue": "^2.5.11"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-vue": "^2.0.0",
     "chai": "^4.1.2",
     "file-loader": "^1.1.5",
     "mocha": "^4.0.1",
